CSS footer spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -39,8 +39,6 @@ header .logo {
     background: white;
     max-width: 600px;
     margin: 0 auto;
-    min-height: 100%;
-    padding-bottom: 50px;
 }
 
 footer {
